# couchi_db

./: README.md  pyproject.toml
couchi_db/: cli.py  main.py  testing.txt  tui.py
